--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,18 @@ body {
     max-width: 200%;
     width: 800px;
 }
+
+h3 {
+    margin: 0;
+    opacity: 0.5;
+    letter-spacing: 2px;
+}
+
+.joke {
+    font-size: 30px;
+    letter-spacing: 1px;
+    line-height: 40px;
+    margin: 50px auto;
+    max-width: 600px;
+}
+
