--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,18 @@ h3 {
     max-width: 600px;
 }
 
+.btn {
+    background-color: #9f68e0;
+    color: #fff;
+    border: 0;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+    padding: 14px 40px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.btn:focus {
+    outline: 0;
+}
+
